# kicad-symbols

./: .Sensor.lib.swp  .gitattributes  .gitignore  .travis.yml  4xxx.dcm  4xxx.lib  4xxx_IEEE.dcm  4xxx_IEEE.lib  74xGxx.dcm  74xGxx.lib  74xx.bck  74xx.dcm  74xx.lib  74xx_IEEE.dcm  74xx_IEEE.lib  Amplifier_Audio.dcm  Amplifier_Audio.lib  Amplifier_Buffer.dcm  Amplifier_Buffer.lib  Amplifier_Current.dcm  Amplifier_Current.lib  Amplifier_Difference.dcm  Amplifier_Difference.lib  Amplifier_Instrumentation.dcm  Amplifier_Instrumentation.lib  Amplifier_Operational.dcm  Amplifier_Operational.lib  Amplifier_Video.dcm  Amplifier_Video.lib  Analog.dcm  Analog.lib  Analog_ADC.dcm  Analog_ADC.lib  Analog_DAC.dcm  Analog_DAC.lib  Analog_Switch.dcm  Analog_Switch.lib  Analog_Switches.lib  Audio.dcm  Audio.lib  (+552 more)
.github/: PULL_REQUEST_TEMPLATE.md  lockdown.yml
legacy/: adc-dac.dcm  adc-dac.lib  analog_devices.dcm  analog_devices.lib  atmel.dcm  atmel.lib  audio.dcm  audio.lib  linear.dcm  linear.lib  maxim.dcm  maxim.lib  microchip.dcm  microchip.lib  powerint.dcm  powerint.lib
obsolete/: Audio.dcm  Audio.lib  CPU.lib  MCU_Commodore.dcm  MCU_Commodore.lib  MCU_Infineon.dcm  MCU_Microchip_ATmega.dcm  MCU_Microchip_ATmega.lib  MCU_Microchip_ATtiny.dcm  MCU_Microchip_ATtiny.lib  MCU_Microchip_AVR.dcm  MCU_Microchip_AVR.lib  MCU_ST_STM32.dcm  MCU_ST_STM32.lib  Memory_NVRAM.dcm  Memory_NVRAM.lib  Memory_RAM.dcm  Memory_RAM.lib  Memory_ROM.lib  Sensor_Motion.dcm  Sensor_Motion.lib  Sensor_Pressure.dcm  Sensor_Pressure.lib
script/: lib_patterns.py  move_symbols.py
